--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -76,7 +76,7 @@
 \author{Alexander Brown } % Your name
 
 \postauthor{\footnotesize \usefont{OT1}{phv}{m}{sl} \color{Black} % Configuration for the institution name
-(adb9) % Your institution
+(adb9@aber.ac.uk) % Your institution
 
 \par\end{flushleft}\HorRule} % Horizontal rule after the title
 
