--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -40,13 +40,13 @@
 
 % Headers - all currently empty
 \lhead{}
-\chead{}
+\chead{\footnotesize CS38010 Assignment}
 \rhead{}
 
 % Footers
 \lfoot{}
-\cfoot{}
-\rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}} % "Page 1 of 2"
+\cfoot{\footnotesize adb9}
+\rfoot{\footnotesize \thepage\ / \pageref{LastPage}} % "Page 1 of 2"
 
 \renewcommand{\headrulewidth}{0.0pt} % No header rule
 \renewcommand{\footrulewidth}{0.4pt} % Thin footer rule
@@ -123,20 +123,29 @@ England
 \begin{description}
 \item[Name:] Alexander Brown
 \item[Position and Main Responsibilities:] Lead Software Developer
-\item[Experience and Knowledge of our industry:] 3 years Experience with the Java programming 
+\item[Experience and Knowledge of our Industry:] 3 years Experience with the Java programming 
 language including mobile application and OSGi development. 1 year Linux administration. %TODO
 \item[Previous Employment:] CICS L3 Service Tooling Engineer, IBM UK.
 \item[Key Skills Brought to the Business:] Software Development and Server Administration.
-\item[Academic/Professions Qualifications:] Java 7 Certification.
+\item[Academic/Professional Qualifications:] Java 7 Certification.
 \end{description}
 
 \subsubsection*{Other Key Personnel}
-
+\begin{description}
+\item[Name:] Mark Richards
+\item[Position and Main Responsibilities:] Developer and Tester
+\item[Experience and Knowledge of our Industry:] 5 years Software Development experience in Java, 
+C\# and Ruby.
+\item[Previous Employment:] Lead Tester, BBC
+\item[Key Skills Brought to the Business:] Software Testing and Architecture
+\item[Academic/Professions Qualifications:] BSc (Hons) Computer Science, University of Kent
+\end{description}
 %TODO
 
 \section{Vision}
 
 \subsection{Business Ideas}
+Lorem Ipsum Inc. will sell mobile 
 % Sum up your business idea
 
 \subsection{Business Goals}
