--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -145,7 +145,8 @@ C\# and Ruby.
 \section{Vision}
 
 \subsection{Business Ideas}
-Lorem Ipsum Inc. will sell mobile 
+Lorem Ipsum Inc. will sell Customer Relationship Management (CRM) software services with support
+for modern mobile platforms.
 % Sum up your business idea
 
 \subsection{Business Goals}
@@ -153,8 +154,12 @@ Lorem Ipsum Inc. will sell mobile
 \subsubsection*{The Business in 5 Years}
 
 \subsection{What the Business Does}
-\begin{tabular}{|l|l|l|}\hline
+\begin{tabular}{|l|p{0.3\textwidth}|p{0.3\textwidth}|}\hline
 Product/Service & Features & Benefits \\ \hline
+Contract Monitoring System & Monitoring and Tracking of every stage of the sale process & Streamlines the sale process \\ \hline
+Forecasting System & Forecasts into opportunities, territories and sales &  \\ \hline
+Social Media Services & Social Media presence to track and communicate with customers & Improves cooperate image \\ \hline
+Mobile and Tablet set-up & Set up for mobile devices & On the move access to any of our systems \\ \hline
 \end{tabular}
 
 
