--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -122,25 +122,36 @@ England
 \subsubsection*{Details of Owners}
 \begin{description}
 \item[Name:] Alexander Brown
-\item[Position and Main Responsibilities:] Lead Software Developer
+\item[Position and Main Responsibilities:] Director, Software Developer
 \item[Experience and Knowledge of our Industry:] 3 years Experience with the Java programming 
 language including mobile application and OSGi development. 1 year Linux administration. %TODO
 \item[Previous Employment:] CICS L3 Service Tooling Engineer, IBM UK.
 \item[Key Skills Brought to the Business:] Software Development and Server Administration.
-\item[Academic/Professional Qualifications:] Java 7 Certification.
+\item[Academic/Professional Qualifications:] MEng Software Engineering, University of Aberystwyth; 
+Java 7 Certification.
 \end{description}
 
 \subsubsection*{Other Key Personnel}
 \begin{description}
 \item[Name:] Mark Richards
-\item[Position and Main Responsibilities:] Developer and Tester
+\item[Position and Main Responsibilities:] Mobile Developer and Tester
 \item[Experience and Knowledge of our Industry:] 5 years Software Development experience in Java, 
 C\# and Ruby.
 \item[Previous Employment:] Lead Tester, BBC
 \item[Key Skills Brought to the Business:] Software Testing and Architecture
 \item[Academic/Professions Qualifications:] BSc (Hons) Computer Science, University of Kent
 \end{description}
-%TODO
+
+\begin{description}
+\item[Name:] Kate Howle
+\item[Position and Main Responsibilities:] Systems Administrator
+\item[Experience and Knowledge of our Industry:] 7 years UNIX/Linux Administration experience.
+\item[Previous Employment:] Senior System Administrator, Linux IT
+\item[Key Skills Brought to the Business:] UNIX/Linux Administration
+\item[Academic/Professions Qualifications:] BSc (Hons) Computer Science, University of Dublin; 
+RedHat Certified Engineer
+\end{description}
+
 
 \section{Vision}
 
@@ -157,7 +168,7 @@ for modern mobile platforms.
 \begin{tabular}{|l|p{0.3\textwidth}|p{0.3\textwidth}|}\hline
 Product/Service & Features & Benefits \\ \hline
 Contract Monitoring System & Monitoring and Tracking of every stage of the sale process & Streamlines the sale process \\ \hline
-Forecasting System & Forecasts into opportunities, territories and sales &  \\ \hline
+Forecasting System & Forecasts into opportunities, territories and sales & Sales forecasts \\ \hline
 Social Media Services & Social Media presence to track and communicate with customers & Improves cooperate image \\ \hline
 Mobile and Tablet set-up & Set up for mobile devices & On the move access to any of our systems \\ \hline
 \end{tabular}
