--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -157,7 +157,11 @@ RedHat Certified Engineer
 
 \subsection{Business Ideas}
 Lorem Ipsum Inc. will sell Customer Relationship Management (CRM) software services with support
-for modern mobile platforms.
+for modern mobile platforms. We offer a good support network to ensure 99.9\% uptime of all of our
+systems.
+
+Customers will be able to run our CRM software on their own servers, for which we provide set up
+support, or on our own servers, where we guarantee the best possible availability.
 % Sum up your business idea
 
 \subsection{Business Goals}
@@ -176,6 +180,14 @@ Mobile and Tablet set-up & Set up for mobile devices & On the move access to any
 
 \subsection{What Makes the Business Different}
 % Your product/service is unique or different compared with the competition because:
+We provide software, support, hosting and set up. We do not restrict the customer and work to 
+improve our software to suit their needs.
+
+Our support staff are friendly and knowledgeable and are able to liaise with our developers to get
+any problems sorted as quickly as we can.
+
+
+
 
 \subsection{Legal Requirements}
 % Blah
@@ -185,13 +197,32 @@ Mobile and Tablet set-up & Set up for mobile devices & On the move access to any
 
 \subsection{Market Research}
 % Trends and how you know them
+Our market research has shown that cloud-based CRM services will continue to gather popularity.
+Cloud is an increasingly popular technology in today's market, especially with the influx of
+mobile devices and roaming data.
+
+Our research also shows that customers prefer a clean, customisable interface on which to interact
+with CRM software. Again with mobile devices this is especially important with screen real-estate
+being a premium.
+
+Social Networking is a great tool to provide our customers to better communicate across the whole
+CRM system and with their customers. A large social presence is key to being successful.
 
 \subsection{Profiling Customers}
 % Customer Groups and research
 
 \subsection{Profiling Competitors}
-\begin{tabular}{|l|l|l|} \hline
+\begin{tabular}{|l|p{0.4\textwidth}|p{0.4\textwidth}|} \hline
 Competitor Name & Strengths & Weaknesses \\ \hline
+ACT! & Contract Management    & Entry-level             \\
+     & Low cost of investment & Limited number of users \\
+     & Easy to use            & Separate Website add-on \\
+     & Calendar Management    &  \\
+     & Sales Tracking         &  \\
+     & Email Merging          &  \\
+
+          
+
 \end{tabular}
 
 \subsection{Managing Marketing Risks}
