--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -152,6 +152,15 @@ C\# and Ruby.
 RedHat Certified Engineer
 \end{description}
 
+\begin{description}
+\item[Name:] Jay Hans
+\item[Position and Main Responsibilities:] Marketing and Sales
+\item[Experience and Knowledge of our Industry:] 2 years Marketing
+\item[Previous Employment:] Business Analysis, IBM UK
+\item[Key Skills Brought to the Business:] Marketing and Sales
+\item[Academic/Professions Qualifications:] BSc (Hons) Business Computing, University of West England
+\end{description}
+
 
 \section{Vision}
 
@@ -189,7 +198,7 @@ any problems sorted as quickly as we can.
 
 
 
-\subsection{Legal Requirements}
+%\subsection{Legal Requirements}
 % Blah
 
 
@@ -214,12 +223,30 @@ CRM system and with their customers. A large social presence is key to being suc
 \subsection{Profiling Competitors}
 \begin{tabular}{|l|p{0.4\textwidth}|p{0.4\textwidth}|} \hline
 Competitor Name & Strengths & Weaknesses \\ \hline
-ACT! & Contract Management    & Entry-level             \\
-     & Low cost of investment & Limited number of users \\
-     & Easy to use            & Separate Website add-on \\
-     & Calendar Management    &  \\
-     & Sales Tracking         &  \\
-     & Email Merging          &  \\
+ACT!     & Contract Management    & Entry-level             \\
+         & Low cost of investment & Limited number of users \\
+         & Easy to use            & Separate Website add-on \\
+         & Calendar Management    &  \\
+         & Sales Tracking         &  \\
+         & Email Merging          &  \\ \hline
+GoldMine & Sale force automation  & Complex interface \\
+         & Integration Capability & Limited number of users \\
+         & Reports and analysis   & Complex set up \\
+         & Automated workflows    &  \\
+         & Project Management     &  \\
+         & Customer service and support &  \\
+         & Telemarketing scripting &  \\ \hline
+Sage CRM & Ease of use            & Purely website based \\
+         & Scalability            & Cost \\
+         & Adaptable and Customisable & \\
+         & Customer service management & \\
+         & Campaign planning and management & \\
+         & Performance Reports    & \\ \hline
+Microsoft CRM & Automated tools   & Cost \\
+         & Embedded with Outlook  & Embedded with Outlook \\ 
+         & Reporting Analytics    &  \\
+         & Scalability            &  \\
+         & Adaptable and Customisable & \\ \hline
 
           
 
