--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -175,6 +175,10 @@ support, or on our own servers, where we guarantee the best possible availabilit
 
 \subsection{Business Goals}
 \subsubsection*{First Year of Business}
+By the end of the first year we will have a usable system with the basic features implemented and
+on sale to customers with support staff. We will also have started the advanced features of our
+CRM package, ready to release them by quarter 3 of year 2. 
+
 \subsubsection*{The Business in 5 Years}
 
 \subsection{What the Business Does}
