--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -158,7 +158,7 @@ RedHat Certified Engineer
 \item[Experience and Knowledge of our Industry:] 2 years Marketing
 \item[Previous Employment:] Business Analysis, IBM UK
 \item[Key Skills Brought to the Business:] Marketing and Sales
-\item[Academic/Professions Qualifications:] BSc (Hons) Business Computing, University of West England
+\item[Academic/Professions Qualifications:] BSc (Hons) Business Computing, University of Berlin
 \end{description}
 
 
@@ -180,6 +180,9 @@ on sale to customers with support staff. We will also have started the advanced 
 CRM package, ready to release them by quarter 3 of year 2. 
 
 \subsubsection*{The Business in 5 Years}
+In 5 years we will have a full suite of CRM software packages available with hosting on our own
+hardware. We will continuously develop our products based on customer feedback in an Agile 
+methodology to continue to give customer satisfaction.
 
 \subsection{What the Business Does}
 \begin{tabular}{|l|p{0.3\textwidth}|p{0.3\textwidth}|}\hline
@@ -200,11 +203,8 @@ Our support staff are friendly and knowledgeable and are able to liaise with our
 any problems sorted as quickly as we can.
 
 
-
-
-%\subsection{Legal Requirements}
-% Blah
-
+\subsection{Legal Status}
+Lorem Ipsum is a private limited company.
 
 \section{Marketing}
 
@@ -222,6 +222,11 @@ Social Networking is a great tool to provide our customers to better communicate
 CRM system and with their customers. A large social presence is key to being successful.
 
 \subsection{Profiling Customers}
+Initially our customers will be small to medium sized businesses that are in the IT industry, 
+though we aim to gain popularity and begin to sell our software to larger businesses, while still
+catering to smaller ones too.
+
+Working in an Agile fashion we will be able to quickly respond to customer requirements.
 % Customer Groups and research
 
 \subsection{Profiling Competitors}
@@ -251,42 +256,82 @@ Microsoft CRM & Automated tools   & Cost \\
          & Reporting Analytics    &  \\
          & Scalability            &  \\
          & Adaptable and Customisable & \\ \hline
-
-          
-
 \end{tabular}
 
 \subsection{Managing Marketing Risks}
+% I have no idea what I'm doing
+% I have no idea what I'm doing
+% I have no idea what I'm doing
 
 \section{Pricing}
 
 \begin{tabular}{|l|l|l|} \hline
-Product/Service & Your Price(s) & Range of Competitor Prices (per unit) \\ \hline
+Product/Service    & Your Price(s) & Range of Competitor Prices (per unit) \\ \hline
+CRM Software       & 75 per month (+ extras)  & 280-1134, 26-29 per user per month \\ \hline
+Mobile Set Up      & 100           & N/A \\ \hline
+Small Business CRM Package & 250   & 280-1134 \\ \hline
+Social Media Presence & 40 per month & Included in CRM Software or N/A \\ \hline
+Forecasting System & 100 per month & Included in CRM Software or N/A \\ \hline
 \end{tabular}
 
 \subsection{Promotion and Advertisement}
+% I have no idea what I'm doing
 
 \subsection{Running the Business}
+% I have no idea what I'm doing
 
 \subsection{Staff}
 \begin{tabular}{|l|l|l|l|}\hline
-Role & Total Cost & Necessary Experience & Specialist Skills or Experience \\ \hline
+Role              & Total Cost & Necessary Experience & Specialist Skills or Experience \\ \hline
+Director          & 20,000     & ???                     & ??? \\ \hline
+Systems Developer & 24,000     & Java, C, REST           & Enterprise systems \\ \hline
+Mobile Developer  & 24,000     & Java, C\#               & Mobile device application development \\ \hline
+Support           & 20,000     & Java, C\#               & Communication \\ \hline
+Marketing Manager & 24,000     & Marketing, distribution & \\ \hline
+Sales Team        & 13,000     & Sales                   & \\ \hline
 \end{tabular}
 
 \subsection{Premises}
+% I have no idea what I'm doing
 \begin{tabular}{|l|l|} \hline
                                & Cost (\pounds) \\ \hline
-Premises required at start-up: & ???            \\ \hline
+Premises required at start-up: & 6000 (PA)      \\ \hline
 \end{tabular}
 
 \subsection{Suppliers}
+% I have no idea what I'm doing
 \begin{tabular}{|l|l|l|} \hline
-Supplier & Product & Credit \\ \hline
+Supplier & Product       & Credit \\ \hline
+Lenovo   & ThinkPad S430 & 770 \\ \hline
+Google   & Nexus 10      & 320 \\ \hline
+Apple    & iPad          & 400 \\ \hline
+Apple    & Developer License & 67 (PA) \\ \hline
 \end{tabular}
 
 \subsection{Equipment}
+We will need at least one computer per employee. In today's age it is advantageous to use laptop
+computers rather than static desktop machines. This will allow staff to work from any place with
+internet access (namely at home or in another office) without inconvenience. We will also invest
+in peripheral devices for these machines too.
+
+We will also need to invest in a number of servers on which to host project management software
+and, eventually, customer CRM systems. To start with we will rent this from other companies, with
+aims to buy our own hardware a few years into the business.
+
+We will try to use Open Source software where possible to minimise the cost. Eclipse, for example,
+is a free IDE which is the preferred tool for writing Android applications. Our servers will run
+Enterprise Linux (likely RHEL or Cent OS) for which our System Administrator(s) will maintain. 
 
 \subsection{Managing Operational Risks}
+Lack of management skill. We will counter this be getting a mentor from our business advisor.
+
+We will have little trading experience, as such it may be difficult to get credit or borrow money,
+so we will need to get stakeholders so we can finance the business initially.
+
+Due to a limited number of staff we may come to over-rely on certain members of staff. To begin
+with there is no solution to this, but encouraging communication between teams and rotations will
+help to ease this in the long run.
+% I have no idea what I'm doing
 
 \section{Finance}
 
