--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -171,6 +171,15 @@ systems.
 
 Customers will be able to run our CRM software on their own servers, for which we provide set up
 support, or on our own servers, where we guarantee the best possible availability.
+
+Since working in industry we have noticed the poor quality or expense of CRM software which works
+whilst on the move. With the availability and prevalence of mobile internet it makes little sense
+not to leverage such technologies.
+
+One thing we have also noticed is the lack of choice when it comes to CRM packages. Our aim is to
+provide what the customer wants and only charge the customer for what they want.
+
+We will also provide help for any set up of the CRM system and the set up of mobile devices.
 % Sum up your business idea
 
 \subsection{Business Goals}
@@ -259,6 +268,26 @@ Microsoft CRM & Automated tools   & Cost \\
 \end{tabular}
 
 \subsection{Managing Marketing Risks}
+One of our main aims is to listen to customers 
+
+\begin{tabular}{|p{0.5\textwidth}|p{0.5\textwidth}|} \hline
+\begin{itemize}
+\item Adapting to Customers Feedback
+\item Modularity
+\item Mobile Access
+\item Price
+\end{itemize} & 
+\begin{itemize}
+\item Inexperience
+\item Unknown brand
+\end{itemize}\\ \hline
+\begin{itemize}
+\item
+\end{itemize} &
+\begin{itemize}
+\item
+\end{itemize} \\ \hline
+\end{tabular}
 % I have no idea what I'm doing
 % I have no idea what I'm doing
 % I have no idea what I'm doing
