--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -268,13 +268,10 @@ Microsoft CRM & Automated tools   & Cost \\
 \end{tabular}
 
 \subsection{Managing Marketing Risks}
-One of our main aims is to listen to customers 
-
 \begin{tabular}{|p{0.5\textwidth}|p{0.5\textwidth}|} \hline
 \begin{itemize}
 \item Adapting to Customers Feedback
 \item Modularity
-\item Mobile Access
 \item Price
 \end{itemize} & 
 \begin{itemize}
@@ -282,10 +279,12 @@ One of our main aims is to listen to customers
 \item Unknown brand
 \end{itemize}\\ \hline
 \begin{itemize}
-\item
+\item Emerging Market
+\item Mobile Access and Roaming Data
 \end{itemize} &
 \begin{itemize}
-\item
+\item Big brands (e.g. Microsoft)
+\item Recession
 \end{itemize} \\ \hline
 \end{tabular}
 % I have no idea what I'm doing
@@ -305,19 +304,26 @@ Forecasting System & 100 per month & Included in CRM Software or N/A \\ \hline
 
 \subsection{Promotion and Advertisement}
 % I have no idea what I'm doing
+We will mainly focus on marketing our product through networking with potential customers and 
+presenting at shows and seminars. Targeted online advertisement will also be used to expand our
+clientèle beyond these ranges.
 
-\subsection{Running the Business}
+We will also make full use of social media networks to maintain links between new and existing
+customers conveniently.
+
+%\subsection{Running the Business}
 % I have no idea what I'm doing
+
 
 \subsection{Staff}
 \begin{tabular}{|l|l|l|l|}\hline
-Role              & Total Cost & Necessary Experience & Specialist Skills or Experience \\ \hline
-Director          & 20,000     & ???                     & ??? \\ \hline
-Systems Developer & 24,000     & Java, C, REST           & Enterprise systems \\ \hline
-Mobile Developer  & 24,000     & Java, C\#               & Mobile device application development \\ \hline
-Support           & 20,000     & Java, C\#               & Communication \\ \hline
-Marketing Manager & 24,000     & Marketing, distribution & \\ \hline
-Sales Team        & 13,000     & Sales                   & \\ \hline
+Role              & Total Cost & Necessary Experience     & Specialist Skills or Experience \\ \hline
+Director          & 20,000     & Java, Project management & Large-scale web-based systems \\ \hline
+Systems Developer & 24,000     & Java, C, REST            & Enterprise systems \\ \hline
+Mobile Developer  & 24,000     & Java, C\#                & Mobile device application development \\ \hline
+Support           & 20,000     & Java, C\#                & Communication \\ \hline
+Marketing Manager & 24,000     & Marketing, distribution  & \\ \hline
+Sales Team        & 13,000     & Sales                    & \\ \hline
 \end{tabular}
 
 \subsection{Premises}
