--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -67,7 +67,7 @@
 
 \pretitle{\vspace{-30pt} \begin{flushleft} \HorRule \fontsize{50}{50} \usefont{OT1}{phv}{b}{n} \color{DarkRed} \selectfont} % Horizontal rule before the title
 
-\title{Lorem Ipsum Ltd.} % Your article title
+\title{Lorem Ipsum} % Your article title
 
 \posttitle{\par\end{flushleft}\vskip 0.5em} % Whitespace under the title
 
@@ -100,10 +100,17 @@
 \section{Summary}
 
 \subsection{Executive Summary}
+Lorem Ispum will sell Customer Relationship Management (CRM) software provided as a service, or
+as a privately hosted system. Our CRM software will be fully integrated with all modern mobile
+devices from smart-phones to tablets meaning our software can be accessed anywhere with a 
+connection to the internet.
+
+Our staff have had intimate knowledge of large scale, distributed systems in their past positions,
+as well as good knowledge into managing relationships and CRM software.
 
 \subsection{Business Detail}
 \subsubsection*{Company Name}
-Lorem Ipsum Ltd.
+Lorem Ipsum
 
 \subsubsection*{Address}
 42 Lorem Ipsum,\\
