--- a/adb9_cs38010-assignment.tex
+++ b/adb9_cs38010-assignment.tex
@@ -37,6 +37,9 @@
 \usepackage{lastpage} % Used to determine the number of pages in the document (for "Page X of Total")
 
 \usepackage{fullpage}
+\usepackage{graphicx}
+\usepackage{pdflscape}
+\usepackage{url}
 
 % Headers - all currently empty
 \lhead{}
@@ -122,6 +125,7 @@ England
 +44 1234 987765
 
 \subsubsection*{The Business Will}
+The business focuses on agile development of CRM software with a full suite of mobile apps.
 % Brief Description
 
 
@@ -151,7 +155,7 @@ C\# and Ruby.
 
 \begin{description}
 \item[Name:] Kate Howle
-\item[Position and Main Responsibilities:] Systems Administrator
+\item[Position and Main Responsibilities:] Systems Administrator and Support
 \item[Experience and Knowledge of our Industry:] 7 years UNIX/Linux Administration experience.
 \item[Previous Employment:] Senior System Administrator, Linux IT
 \item[Key Skills Brought to the Business:] UNIX/Linux Administration
@@ -168,6 +172,16 @@ RedHat Certified Engineer
 \item[Academic/Professions Qualifications:] BSc (Hons) Business Computing, University of Berlin
 \end{description}
 
+To start off with we will have to keep salaries low, both mobile and systems developers will be 
+paid a slightly lower salary than would be typical. However as the company grows we plan to offer
+a rapid increase in wage to increase loyalty.
+
+Our support staff require slightly less skills and their salaries are slightly lower that full
+developers. They will also be responsible for the maintenance of our Linux servers on which the 
+CRM software is hosted. Again we plan to increase this salary in year 2.
+
+The sales team have a low salary but be working on commission. The marketing manager will be on a
+flat salary similar to the developers, again with the aim to rapidly increase this wage.
 
 \section{Vision}
 
@@ -236,6 +250,24 @@ being a premium.
 
 Social Networking is a great tool to provide our customers to better communicate across the whole
 CRM system and with their customers. A large social presence is key to being successful.
+
+These days Google's Android phone operating system is one of the more popular phone operating systems,
+iOS from Apple is another very popular phone OS. Emerging OSes like Microsoft Windows Phone and 
+Firefox OS are also a market to consider for the not-too-distance future.
+
+\begin{figure}[h]
+\centering
+\includegraphics[scale=0.5]{smartphone-sales.png}
+
+From: \url{http://en.wikipedia.org/wiki/File:World_Wide_Smartphone_Sales_Share.png}
+\caption{World-Wide Smartphone Sales (\%)} \label{sales}
+\end{figure}
+
+Figure~\ref{sales} show the percentage market share of smartphone OSes; from this it is fairly
+obvious our main market should be the Android OS, followed by iOS. However, most businesses will
+likely have slightly older phones, so RIM (Blackberry) will also be considered. Using an Agile
+methodology will also help ease this as we will be able to respond to customers needs rather than
+what we believe to be our customers needs.
 
 \subsection{Profiling Customers}
 Initially our customers will be small to medium sized businesses that are in the IT industry, 
@@ -377,4 +409,23 @@ help to ease this in the long run.
 
 \section{Finance}
 
+\begin{landscape}
+\centering
+\includegraphics[width=\linewidth]{pl-y1.pdf}
+\newpage\hfill\newpage
+
+\includegraphics[width=\linewidth]{cashflow-y1.pdf}
+\newpage\hfill\newpage
+
+\includegraphics[width=\linewidth]{balance-y1.pdf}
+\newpage\hfill\newpage
+
+\includegraphics[width=\linewidth]{pl-y2.pdf}
+\newpage\hfill\newpage
+
+\includegraphics[width=\linewidth]{cashflow-y2.pdf}
+\newpage\hfill\newpage
+
+\includegraphics[width=\linewidth]{balance-y2.pdf}
+\end{landscape}
 \end{document}
